Corrected popup color on registration component for sucessful registration, got rid of the hide button toggle to collapse daily scheduled classes on landing page (kept it for uncomfirmed classes), and implemented spinner on login button -- angular/frontend

--- a/angular/frontend/src/app/login/login.component.css
+++ b/angular/frontend/src/app/login/login.component.css
@@ -1,3 +1,7 @@
+button[disabled] {
+  opacity: 1 !important;
+  pointer-events: none;
+}
 
 .logo {
         /* Set dimensions and circular shape */
